# bootstrap-to-airflow

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-app.yml
airflow/dags/: custom_sprott_scraper.py  functional_sprott_scraper.py
airflow/plugins/: __init__.py
airflow/plugins/hooks/: scaper_hook.py
airflow/plugins/operators/: fund_scraper_operator.py
src/: abstract_classes.py  config.yml  configured_abstract_classes.py  functional_scraper.py  scraper_class.py  simple_webscraper.py
tests/: test_functional_scraper.py
