[project]
name = "bootstrap-to-airlfow"
version = "0.0.1"
authors = [
  {name="CincyBC"},
]
description = "Code Repo to go along with dev.to series."
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/CincyBC/bootstrap-to-airflow"
"Bug Tracker" = "https://github.com/CincyBC/bootstrap-to-airflow/issues"

[tool.pytest.ini_options]
minversion = "6.0"
python_files = "test_*.py"
addopts = "-ra -q"
testpaths = "tests/"
pythonpath = "src/"